Server Running verify